# partymod-thps3

./: CMakeLists.txt  LICENSE  README.md  partymod.ini  readme-partymod.txt
config/: main.c
patcher/: data.c  executable.bps  main.c
patches/: optionsmenu.bps
src/: config.c  config.h  global.h  hash.c  hash.h  input.c  input.h  main.c  patch.c  patch.h  patches.c  script.c  script.h
